# celery-simple-elasticsearch

./: .gitignore  AUTHORS  LICENSE  README.rst  setup.cfg
celery_simple_elasticsearch/: conf.py  indexes.py  signals.py  tasks.py  utils.py
docs/: Makefile  changelog.rst  conf.py  make.bat
