[global]
setup-hooks =
    celery_simple_elasticsearch.version_hook

[metadata]
name = celery-simple-elasticsearch
author = Jim Kelly
author-email = pthread1981@gmail.com
summary = An app for integrating Celery with Django Simple ElasticSearch
description-file = README.rst
home-page = http://celery-simple-elasticsearch.rtfd.org/
project-url =
    Github, https://github.com/jimjkelly/celery-simple-elasticsearch/
classifier =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Topic :: Utilities
requires-dist =
    django-appconf>=0.4.1
    django-celery-transactions>=0.1.2


[files]
packages =
    celery_simple_elasticsearch
    celery_simple_elasticsearch.tests
extra_files =
    README.rst
    AUTHORS

[backwards_compat]
zip_safe = False

[wheel]
universal = 1
